session-12-k8s-ingress-configmaps-secrets/03-ingress/apps.yaml
# Two small apps behind one Ingress
apiVersion: apps/v1
kind: Deployment
metadata: { name: shop, namespace: s12 }
spec:
  replicas: 2
  selector: { matchLabels: { app: shop } }
  template:
    metadata: { labels: { app: shop } }
    spec:
      containers:
        - name: app
          image: hashicorp/http-echo:1.0
          args: ["-listen=:5678", "-text=SHOP service  (pod $(POD_NAME))"]
          env: [{ name: POD_NAME, valueFrom: { fieldRef: { fieldPath: metadata.name } } }]
          ports: [{ containerPort: 5678 }]
---
apiVersion: v1
kind: Service
metadata: { name: shop-svc, namespace: s12 }
spec:
  selector: { app: shop }
  ports: [{ port: 80, targetPort: 5678 }]
---
apiVersion: apps/v1
kind: Deployment
metadata: { name: blog, namespace: s12 }
spec:
  replicas: 2
  selector: { matchLabels: { app: blog } }
  template:
    metadata: { labels: { app: blog } }
    spec:
      containers:
        - name: app
          image: hashicorp/http-echo:1.0
          args: ["-listen=:5678", "-text=BLOG service  (pod $(POD_NAME))"]
          env: [{ name: POD_NAME, valueFrom: { fieldRef: { fieldPath: metadata.name } } }]
          ports: [{ containerPort: 5678 }]
---
apiVersion: v1
kind: Service
metadata: { name: blog-svc, namespace: s12 }
spec:
  selector: { app: blog }
  ports: [{ port: 80, targetPort: 5678 }]
